# leeds-pi

./: .bashrc  .gitignore  .inputrc  Untitled.ipynb  gritconfig  leedspi_rsa.pub  log_on.sh  prepare-new.sh
basic-rust/: deploy.sh
basic-rust/.cargo/: config
packet-sniffer/: Cargo.toml  data_rust_five.txt  data_rust_nothing.txt  data_rust_nothing_768.txt  data_rust_one.txt  data_rust_three_768.txt  deploy.sh
packet-sniffer/src/: main.rs
python/: data.csv  data_300.csv  data_300_fixed.csv  data_4800.csv  receive.py  second_data.csv  some_data.csv  third_data.csv
rust/: Cargo.toml  deploy.sh
rust/.cargo/: config
rust/src/: antenna.rs  frequency.rs  main.rs  rpi.rs
