[package]
name = "leeds-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.25"
lazy_static = "1.4.0"
poem = { version = "1.3.50", features = ["websocket", "anyhow"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.16"
[target.'cfg(unix)'.dependencies]
rppal = "0.14.1"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
